--- a/_config.yml
+++ b/_config.yml
@@ -25,20 +25,21 @@ author:
   avatar           : "profile.png"
   name             : "Wenhui"
   pronouns         : # example: "she/her"  
-  bio              : "Focus on economics"
+  bio              : "Interest on economics"
   location         : "China"
   employer         : "Guizhou University"
-  uri              : # URL
-  email            : "wenhuiyang.econ@gmail" 
-
+  uri              : "https://wenhui-y.github.io"
+  email            : "ywh952719@163.com" 
+  remote_theme     : "mmistakes/minimal-mistakes"
+  minimal_mistakes_skin: "air"
   # Academic websites
   academia         : # URL
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/0009-0005-7889-9778"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : #
   researchgate     : # URL
   scopus           : # URL
 
@@ -46,7 +47,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : #
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
